--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 	</footer>
 
 <script type="text/javascript" src="js/vendor/jquery-2.2.2.min.js"></script>
-<script type="text/javascript" src="js/vendor/typeahead.min.js"></script>
+<script type="text/javascript" src="js/vendor/jquery.tmpl.min.js"></script>
 <script type="text/javascript" src="js/build/app.js"></script>
 
 <script type="text/javascript">
